namespaces/loom-system/10-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: access-to-loom-services
  namespace: loom-system
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: gateway
  to:
    - group: ""
      kind: Service
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loom-route
  namespace: loom-system
spec:
  parentRefs:
    - name: jarrett-net
      namespace: gateway
  hostnames:
    - loom.jarrett.net
  rules:
    - backendRefs:
        - name: loom-spindle-service
          namespace: loom-system
          port: 6555
